# avo-chat-server

./: .gitignore  LICENSE  README.md
C/: CMakeLists.txt  main.c
C/include/: global.h  protocol.h
C/include/base/: event_loop.h  initialize.h  signal_handle.h  socket_base.h
C/include/utils/: io_utils.h  log.h  str_utils.h  timer.h
C/source/: global.c  protocol.c
C/source/base/: event_loop.c  initialize.c  signal_handle.c  socket_base.c  thpool.c
C/source/utils/: io_utils.c  log.c  str_utils.c  timer.c
C/test/: hiredis_test.c
java/: pom.xml
java/src/main/java/nwpu/se/avoserver/: AvoServerApplication.java
java/src/main/java/nwpu/se/avoserver/advice/: CommonResultWrapper.java  GlobalExceptionHandler.java
java/src/main/java/nwpu/se/avoserver/common/: CommonUtil.java  JwtUtil.java  RedisUtil.java
java/src/main/java/nwpu/se/avoserver/constant/: ResultCodeEnum.java  UserSexEnum.java
java/src/main/java/nwpu/se/avoserver/controller/: ContactController.java  GroupController.java  MessageController.java  UserController.java
java/src/main/java/nwpu/se/avoserver/entity/: Contact.java  Group.java  P2gMessage.java  P2pMessage.java  User.java
java/src/main/java/nwpu/se/avoserver/exception/: BusinessException.java  IllegalOperationException.java  NotFoundException.java
java/src/main/java/nwpu/se/avoserver/mapper/: ContactMapper.java  GroupMapper.java  P2gMessageMapper.java  P2pMessageMapper.java  (+1 more)
java/src/main/resources/: application.properties  docker-compose.yml
java/src/main/resources/mapper/: ContactMapper.xml  GroupMapper.xml  P2gMessageMapper.xml  P2pMessageMapper.xml  UserMapper.xml
java/src/test/java/nwpu/se/avoserver/: AvoServerApplicationTests.java
(+38 files in other folders)
